1.3.5 (04.09.2015):

* Add prepend and append to PDF save options.
* Use new threading philosophy for scanning thread.
* Fix bug applying profiles with duplicated or invalid options


1.3.4 (04.08.2015):

* Fix startup crash due to incorrect MessageDialog type and buttons


1.3.3 (01.08.2015):

* Suppress warnings when passed boolean as empty string
  Closes LP: #844582 ("Invalid argument" when trying to scan)
* Moved config file format to JSON. JSON::PP is a core module,
  so this does not create a new dependency.
* + option not to show dialog messages
* Trap errors from unpaper, rotate, crop, threshold, negate, unsharp
  processing tools
  Closes bug #198 (empty pages when saving, GIMP, or printing)
* Removed dependency on liblinux-distribution-perl as not available on FreeBSD
* Also support gconftool-2 when checking for email client
  Closes bug #200 (it doesn't attach on Fedora 21 (with thunderbird))
* Update to German translation (thanks to Tobias Bannert)
* Fixed program hang importing an empty file at the same time as other files
* Rewrite threading system to simplify it and remove many race conditions
* Fixed bug setting threshold-before-ocr check box


1.3.2 (13.05.2015):

* Fixed program hang displaying save dialog


1.3.1 (10.05.2015):

* Fixed bug saving PDF after thresholding
* Warn if less free space in session directory than limit set in preferences
* Fix defaults for unpaper and output-pages<->layout misalignment
* Where available in the OCR output, use the full page/column/para/line/word
  hiearchy in the djvu text layer. Closes bug #191
  (Exported DjVu with Tesseract OCR miss a lot of structure infos)
* Remove corrupt element from session after importing. Closes bug #195
  (Any operation after opening a saved session crashes the program)
* Basque translation (thanks to gorkaazk)
* Update to German translation (thanks to Tobias Bannert)
* Update to Russian translation (thanks to Aleksey Kabanov)


1.3.0 (30.01.2015):
