@@ -145,6 +145,7 @@ t/02_Scanner_Options_umax.t
 t/03_Page.t
 t/04_Unpaper.t
 t/05_Dialog.t
+t/060_Dialog_Scan.t
 t/0611_Dialog_Scan_Sane.t
 t/0612_Dialog_Scan_Sane.t
 t/0613_Dialog_Scan_Sane.t
