@@ -3,6 +3,8 @@
 * Add prepend and append to PDF save options.
 * Use new threading philosophy for scanning thread.
 * Fix bug applying profiles with duplicated or invalid options
+* Selecting single-sided pages also selects facing page. Closes bug #206
+  (Selecting 1-sided/front after 2-sided/back has a logical problem)
 
 
 1.3.4 (04.08.2015):
